--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,48 @@
-theme: jekyll-theme-minimal
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: Szkrkr Portfolio
+email: szkrkr1@gmail.com
+description: >- # this means to ignore newlines until "baseurl:"
+    szkrkr's portfolio.
+    I'm Suzuki, IT engineer, in Tokyo.
+    My favorite languages/frameworks: TypeScript and React, C#.
+    My hobbies: Playing classic guitar, cello, charango, and Drawing.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "szkrkr.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+github_username:  szkrkr
+header_pages:
+  - profile.md
+  - works.md
+
+# Build settings
+markdown: kramdown
+theme: minima
+plugins:
+  - jekyll-feed
+
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
+# exclude:
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
+
+google_analytics: G-S63FQV8B41
